Add git config files in $XDG_CONFIG_HOME/git/

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Session.vim
 !.config/dwb/mimetypes
 !.config/dwb/searchengines
 !.config/dwb/settings
+!.config/git
 !.config/htop
 !.config/i3
 !.config/newsbeuter/config
