--- a/.config/i3/config
+++ b/.config/i3/config
@@ -212,6 +212,10 @@ workspace_auto_back_and_forth yes
 for_window [title="david_adsnovo - Skype*"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout split;
 for_window [title="Liste de contacts"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout split;
 for_window [title="logs"] focus, sticky enable, move bottom, resize shrink bottom 5 ppt, layout split vertical;
+for_window [class="w_float-notitle-medium-sticky"] border 1pixel, floating enable, resize set $wfM_width $wfM_height, move position center, sticky enable
+for_window [class="w_float-notitle-medium"] border 1pixel, floating enable, resize set $wfM_width $wfM_height, move position center
+for_window [class="w_float-notitle-sticky"] border 1pixel, floating enable, move position center, sticky enable
+for_window [class="w_float-notitle"] border 1pixel, floating enable, move position center
 
 #for_window [title="vim"] title_format "<span font='devicons'> </span>%title"
 for_window [title="uvim"] border 1pixel
