--- a/.config/i3/config
+++ b/.config/i3/config
@@ -111,7 +111,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # sticky window
-#bindsym $mod+Shift+s sticky toggle
+bindsym $mod+Escape sticky toggle
 # focus the child container
 #bindsym $mod+d focus child
 
