--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,6 +37,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal;
+bindsym $mod+Shift+Return splith; exec i3-sensible-terminal;
 
 # kill focused window
 bindsym $mod+Shift+q kill
