--- a/.config/i3/config
+++ b/.config/i3/config
@@ -228,6 +228,8 @@ for_window [class="Gvim"] border 1pixel
 for_window [title="filemanager"] border 1pixel, layout tabbed;
 for_window [title="JACK.*"] floating enable;
 for_window [title="Molotov"] floating enable, resize set $wfM_width $wfM_height, move absolute position center, sticky enable;
+for_window [class="Deezer"] floating enable, resize set $wfM_width $wfM_height, border 1pixel;  move absolute position center, sticky enable;
+for_window [class="Caprine"] floating enable, resize set $wfM_width $wfM_height, move absolute position center, border 1pixel, sticky enable;
 for_window [class="Gpodder"] floating enable, resize set $wfM_width $wfM_height, move absolute position center, sticky enable;
 for_window [title="pinentry"] floating enable;
 for_window [class="termite_dict"] floating enable, move absolute position center, border 1pixel;
@@ -251,7 +253,7 @@ for_window [title="skype"] sticky enable, border 1pixel, move scratchpad, scratc
 for_window [title="N26"] sticky enable, border 1pixel, move scratchpad, resize set 500 820, scratchpad show, move position center;
 
 for_window [title="pidgin"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
-for_window [class="Slack"] sticky enable, border 1pixel, move scratchpad, resize set $wfM_width $wfM_height,  scratchpad show; 
+for_window [class="Slack|Keybase|Whalebird"] sticky enable, border 1pixel, move scratchpad, resize set $wfM_width $wfM_height,  scratchpad show; 
 for_window [title="iCloud"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
 
 client.focused #859900 #859900 #eee8d5 #859900
@@ -363,14 +365,15 @@ mode "$mode_system" {
 }
 
 # mplayer control
-set $mode_mplayer mplayer: [p]ause [s]eek [q]quit
-bindsym $mod+b mode "$mode_mplayer"
+set $mode_player player: [p]ause/[p]lay [n]ext [s]eek [q]quit/stop
+bindsym $mod+b mode "$mode_player"
 
-mode "$mode_mplayer" {
+mode "$mode_player" {
 
-    bindsym p exec zsh -i -c 'echo "pause" > /tmp/mplayer', mode "default"
-    bindsym s exec zsh -i -c 'echo "seek 10" > /tmp/mplayer'
-    bindsym q exec zsh -i -c 'echo "quit" > /tmp/mplayer', mode "default"
+    bindsym p exec zsh -i -c 'echo "pause" > /tmp/mplayer && mpc toggle', mode "default"
+    bindsym n exec zsh -i -c 'mpc next', mode "default"
+    bindsym s exec zsh -i -c 'echo "seek 10" > /tmp/mplayer && mpc seek +10'
+    bindsym q exec zsh -i -c 'echo "quit" > /tmp/mplayer && mpc stop', mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
