--- a/.config/i3/config
+++ b/.config/i3/config
@@ -228,6 +228,7 @@ for_window [class="Gvim"] border 1pixel
 for_window [title="filemanager"] border 1pixel, layout tabbed
 for_window [title="JACK.*"] floating enable
 for_window [title="Molotov"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
+for_window [class="Deezer"] floating enable, border 1pixel, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
 for_window [class="Gpodder|Mpsyt"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
 for_window [title="pinentry"] floating enable
 for_window [class="termite_dict"] floating enable, move position center, border 1pixel
