--- a/.config/i3/config
+++ b/.config/i3/config
@@ -229,7 +229,7 @@ for_window [title="filemanager"] border 1pixel, layout tabbed
 for_window [title="JACK.*"] floating enable
 for_window [title="Molotov"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
 for_window [class="Deezer"] floating enable, border 1pixel, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
-for_window [class="Caprine"] floating enable, resize set $wfM_width $wfM_height, move absolute position center, border 1pixel, sticky enable;
+for_window [class="Caprine"] floating enable, resize set $wfL_width $wfL_height, move absolute position center, border 1pixel, sticky enable;
 for_window [class="Gpodder|Mpsyt"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
 for_window [title="pinentry"] floating enable
 for_window [class="termite_dict"] floating enable, move position center, border 1pixel
