--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -17,7 +17,7 @@ set strict-ssl=false
 
 handler-add mailto=gmail %s
 #handler-add ftp=termite -e wget %s -P ~/downloads
-set home-page=./.config/vimb/closed
+set home-page=./.config/vimb/historylast
 
 nmap ,,v ::sh! sh -c 'xsel -o -s | xdotool type --file -'
 nmap ,,w :source ~/.config/vimb/config<CR>
@@ -31,6 +31,7 @@ nmap ,,i ::e! instapaper()<CR>
 nmap ,,f ::e! facebook()<CR>
 nmap ,,a ::e! archive()<CR>::bma archive<CR>
 nmap ,;a ::e! getArchive()<CR>
+nmap ,,e :shell! termite -e "vim $VIMB_URI"<CR>
 
 nmap ,ll :tabopen http://labonneformation.pole-emploi.local<CR>
 nmap ;ll ::e! workUrlLbfToLocal()<CR>
@@ -57,8 +58,10 @@ augroup bookmark
 augroup end
 
 augroup linkfile
+    autocmd LoadStarted * shell sh -c "tail -100 ~/.config/vimb/history > ~/.config/vimb/historylast"
     autocmd LoadFinished file:///*/closed e! linkFileToHtml('Derniers onglets ouverts');
-    autocmd LoadFinished file:///*/history e! linkFileToHtml('Historiques');
+    autocmd LoadFinished file:///*/historylast e! linkFileToHtml('Historique <a href="file:///home/david/.config/vimb/history">(voir tout l\'historique)</a>');
+    autocmd LoadFinished file:///*/history e! linkFileToHtml('Historique');
 augroup end
 
 augroup trello
