Add a new photo menu in i3 and improve default vimb color

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -125,16 +125,16 @@ bindsym $mod+Left move workspace to output left
 bindsym $mod+Right move workspace to output right
 
 #icon
-set $vimIcon 
+set $vimIcon 
 
 #menu title
 set $menu1 1: terminal
 set $menu2 2: web
-set $menu3 3:
+set $menu3 3:
 set $menu4 4: gmail
 set $menu5 5:
-set $menu6 6: JIT
-set $menu7 7:tmux-weechat
+set $menu6 6:
+set $menu7 7:
 
 
 # switch to workspace
@@ -144,6 +144,7 @@ bindsym $mod+3 workspace $menu3; exec [ $( ps -eo cmd | grep -c '[t]ermite --tit
 #bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
 bindsym $mod+4 workspace $menu4; exec [ $( ps -eo cmd | grep -c '[t]ermite --title mail-gmail' ) -eq 2 ] && termite --title mail-gmail -e '/usr/bin/mutt -e "source ~/.mutt/gmail.com"'
 bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '^/usr/lib/brave-bin/brave' ) -eq 0 ] && /usr/bin/brave; move workspace to output $screen2
+bindsym $mod+6 workspace $menu6;
 #bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttperso' ) -eq 2 ] && termite --title muttperso -e '/usr/bin/mutt -e "source ~/.mutt/newmanity.com"'
 #bindsym $mod+6 workspace $menu6; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttjit' ) -eq 2 ] && termite --title muttjit -e '/usr/bin/mutt -e "source ~/.mutt/jobintree.com"'
 #bindsym $mod+7 workspace $menu7; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
@@ -186,7 +187,7 @@ bindsym XF86AudioPause exec mpc toggle
 # finds out, if available)
 bar {
   #font pango:FuraCode Nerd Font, 10
-  font pango:MesloLGSDZ Nerd Font,forkawesome, 10
+  font pango:Meslo LG S DZ, forkawesome, icomoon,  10
   status_command python ~/.config/i3/status.py
     position top
   colors {
@@ -240,11 +241,13 @@ for_window [title="Liste de contacts"] focus, sticky enable, move right, resize 
 #for_window [class="Vimb"] border 1pixel
 #for_window [title="vim"] title_format "<span font='devicons'> </span>%title"
 
-# assign graphic app to dedicated workspace
+# assign app to dedicated workspace
 assign [class="(pinta|Inkscape)"] graphic
 for_window [class="(pinta|Inkscape)"] focus
 assign [class="Pidgin"] pidgin
 for_window [class="Pidgin"] focus
+assign [class="Brave-browser"] $menu5
+assign [class="Shotwell"] $menu6
 #assign [class="Vimb"] $menu2
 #for_window [class="Vimb"] layout tabbed; focus
 #assign [class="Urxvt"] terminal
